Resolves: tdf#99461 reverse logic of TokenPointers::skipToken()

... so that all code tokens are adjusted even if shared with another
flat copied token array, but RPN not if shared. Was vice versa.

ScConditionEntry has shared token arrays for pFormula1|pFCell1
respectively pFormula2|pFCell2 hence the references weren't updated.

Change-Id: I52256b5ea20da753a2a29ff437f09c921566e070
(cherry picked from commit 03124f5be5466c7f7cac012de05ef387b9718c4a)
Reviewed-on: https://gerrit.libreoffice.org/24375
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 947cd18108ca03abe79895fa38520338da159aa6)